2010-06-23 Philipp Klaus Krause <pkk AT spth.de>
	* device/lib/z80/divsigned.s:
	  Minor cleanup
	* src/SDCCpeeph.c,
	  src/z80/peep.h,
	  src/z80/main.c,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  Implemented correct instruction size calculation, replacing estimate.

2010-06-20 Borut Razem <borut.razem AT siol.net>

	* src/SDCCmain.c, src/pic/main.c, src/pic16/main.c:
	  fixed bug #3015137: -c -o not working as expected (caused by fix for
          #2951083)
	* device/lib/pic16/libc/string/*, device/lib/pic16/libc/utils/cnvint.S,
	  device/lib/pic16/libc/utils/cnvfrac.S:
	  sdcc library license changed to GPL+LE

2010-06-19 Borut Razem <borut.razem AT siol.net>

	* device/include/pic/pic14devices.txt,
	  device/include/pic16/pic16devices.txt:
	  license changed to GPL - files are not part of sdcc library
	* device/lib/z80/divunsigned.s, device/lib/pic16/debug/gstack/gstack.c,
	  device/lib/pic16/libsdcc/int/*, device/lib/pic16/libc/stdlib/*:
	  sdcc library license changed to GPL+LE

2010-06-15 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/z80/abs.s,
	  device/lib/z80/Makefile.in:
	  Z80-specific abs().

2010-06-14 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c,
	  src/SDCCpeeph.h,
	  src/port.h,
	  src/mcs51/peeph.def,
	  src/ds390/peeph.def,
	  src/avr/peeph.def,
	  src/z80/peep.h,
	  src/z80/peep.c,
	  src/z80/peeph-z80.def,
	  src/z80/peeph-gbz80.def:
	  Peephole cleanup.

2010-06-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/lksym.c,
	* src/ds390/main.c,
	* src/SDCCast.c: cosmetic changes
	* src/SDCC.y: removed type_specifier2, moved AT into type_specifier,
	    fixed bug 29979999
	* src/SDCCsymt.c (addDecl): fixed char* __code __at(N) bug
	* support/regression/tests/absolute.c: added test for bug 29979999

2010-06-12 Borut Razem <borut.razem AT siol.net>

	* device/include/asm/pic/features.h, device/include/pic/*.h,
	  device/include/pic/p16f_common.inc:
	  sdcc library license changed to GPL+LE
